--- a/styles/style.module.css
+++ b/styles/style.module.css
@@ -13,6 +13,7 @@
   max-width: 400px;
   margin: 50px auto;
   font-family: "Arial Narrow", Impact, "Franklin Gothic Medium", sans-serif;
+}
 
 .form {
   width: 100%;
